<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".SignUpActivity">

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:drawableLeft="@drawable/ic_mail"
        android:drawablePadding="5dp"
        android:padding="5dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:layout_above="@+id/etPassword"
        android:textSize="20sp"
        android:background="#ffffff"/>
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:drawableLeft="@drawable/ic_pass"
        android:drawablePadding="5dp"
        android:layout_marginVertical="5dp"
        android:padding="5dp"
        android:layout_marginHorizontal="15dp"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:layout_above="@+id/etConfirmPassword"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Username"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="5dp"
        android:layout_marginVertical="5dp"
        android:padding="5dp"
        android:layout_marginHorizontal="15dp"
        android:background="#ffffff"
        android:layout_above="@+id/etEmail"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Confirm Password"
        android:drawableLeft="@drawable/ic_pass"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:drawablePadding="5dp"
        android:inputType="textPassword"
        android:padding="5dp"
        android:background="#ffffff"
        android:layout_centerInParent="true"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="5dp"
        android:textColor="#ffffff"
        android:background="#000000"
        android:layout_below="@+id/etConfirmPassword"/>

</RelativeLayout>