...
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="?attr/actionBarSize"
                app:title=""
                android:background="#f0f0f0"
                app:elevation="0dp"
                app:popupTheme="@style/RoundedMenu"
                app:layout_scrollFlags="enterAlways">
            </androidx.appcompat.widget.Toolbar>
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/toolbar"
                app:tabIndicatorColor="#000000"
                android:background="#f0f0f0">
<!--                <com.google.android.material.tabs.TabItem-->
<!--                    android:id="@+id/tabGrid"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:icon="@drawable/ic_grid"-->
<!--                    android:text="Grid View"/>-->
<!--                <com.google.android.material.tabs.TabItem-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:icon="@drawable/ic_list"-->
<!--                    android:text="List View"/>-->
            </com.google.android.material.tabs.TabLayout>


        </RelativeLayout>

        <androidx.viewpager2.widget.ViewPager2
...
            android:layout_height="match_parent"
            android:layout_marginTop="112dp">
        </androidx.viewpager2.widget.ViewPager2>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_add"
        android:text=""
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
...
