...
        android:id="@+id/txtSignUpGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up with Google"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="Log In"
        android:layout_below="@+id/etPassword"/>

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
...
