...
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Time and Date"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"/>
        <EditText
            android:id="@+id/etNote"
            android:gravity="top"
            android:background="@null"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="40dp"
            android:layout_below="@+id/txtTime"
            android:hint="Type here..."
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/btnFinish"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/roundedbutton"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
...
